# gmft

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  TODO.md  comparison.md  comparison.tsv  dev.md  pathway.md  pyproject.toml  pytest.ini  reading_list.md  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
data/: .gitignore  comparison.md
data/test/references/: bulk_row_heights.csv  bulk_row_heights.parquet  cropped_tables.json  ditr_csvs.json  ditr_tables.json  tatr_results.json  tatr_tables.json  tiny_cropped_positions.tsv
docs/: requirements.txt
docs/source/: advanced.rst  api.rst  conf.py  config.rst  faq.rst  gmft.auto.rst  gmft.base.rst  gmft.common.rst  gmft.presets.rst  gmft.rst  gmft.table_detection.rst  gmft.table_function.rst  gmft.table_visualization.rst  gmft_toplevel.rst  index.rst  rag.rst  usage.rst
docs/source/_static/: custom.css
docs/source/detectors/: base.rst  common.rst  img2table.rst  tatr.rst
docs/source/formatters/: base.rst  common.rst  tatr.rst  (+3 more)
gmft/: __future__init__.py  __init__.py  _dataclasses.py  _embed_tables.py  auto.py  base.py  common.py  pdf_bindings.py  presets.py  py.typed  table_captioning.py  table_detection.py  table_function.py  table_function_algorithm.py  table_visualization.py  tables.py  utils.py
gmft/_rich_text/: __init__.py  base.py  common.py  rich_page.py
gmft/_testing/: mock.py  toys.py
gmft/algo/: dividers.py  intervallic.py  minima.py  table_function_algorithm.py
gmft/algorithm/: README.md  captions.py  ditr_structure.py  dividers.py  histogram.py  partition_rewrite.py  partition_structure.py  rewrite.py  structure.py  structure_rewrite.py
gmft/config/: _dataclasses.py
gmft/core/: _dataclasses.py  auto_lazy.py  words_list.py
gmft/custom/: base.py
gmft/detectors/: base.py  camelot.py  common.py  detect_img2table.py  img2table.py  tatr.py
gmft/formatters/: base.py  common.py  ditr.py  format_img2table.py  histogram.py  img2table.py  intervalic.py  intervallic.py  surya_format.py  tabled.py  tatr.py  with_img2table.py  with_tabled.py
gmft/pdf_bindings/: __init__.py  base.py  bindings_mu.py  bindings_pdfium.py  common.py  ocr.py  pdfium.py  pdftext.py
gmft/reformat/: README.md  REFACTOR.md  schema.py  state.py
notebooks/: bulk_extract.ipynb  demo.ipynb  example_ditr.ipynb  example_histogram.ipynb  example_intervalic.ipynb  example_intervallic.ipynb  example_tabled_compat.ipynb  gmft_eval.ipynb  selective_reocr.py
test/: conftest.py  test_auto.py  test_bulk.py  test_captioning.py  test_config.py  test_cropped.py  test_device.py  test_df.py  test_full.py  test_full_rotated.py  test_imports.py  test_mp.py  test_multi_index.py  test_nmr.py  test_pdfium.py  test_pubt.py  test_rich_page.py  test_rotated.py  test_serial.py  test_spanning.py  test_tatr.py
test/compat/: test_img2table.py  test_imports.py  test_tabled.py
test/histogram/: _df_data.py  test_df.py
test/intervals/: test_intervals.py
test/outputs/: tatr_p7.info  tatr_p8.info  tiny_df.csv  tiny_df.info
test/pdf/: test_words.py
test/pdf_bindings/: test_image_only.py
test/reformat/: benchmark_words_to_table_array.py  test_construct_df.py  test_grid_reproduce.py  test_reformat.py  test_reformat_basic.py  test_row_line_counts.py  test_syntax.py
test/refs/: cropped_tables.json  ditr_csvs.json  ditr_tables.json  ditr_tables.md  nmr_results.json  tatr_csvs.json  tatr_results.json  tatr_tables.json
test/samples/: tiny_pdfium.tsv
test/scripts/: benchmark_words_to_table_array.py  preview_csvs.py  script_generate_cropped.py  script_generate_ditr.py
test/tatr/: test_df.py  test_full_rotated.py  test_pubt.py  test_spanning.py
(+183 files in other folders)
