[project]
name = "gmft"
version = "0.3.2"
description = "Lightweight, performant, deep table extraction"
authors = [
  {name = "conjunct"},
  {name = "conjuncts"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "pypdfium2 >= 4",
  "transformers >= 4.35.2", # need the no_timm revision
  "torch",
  "pillow",
  "pandas",
  "matplotlib",
  "tabulate"
  
]

[project.optional-dependencies]
pymupdf = [
  "pymupdf"
]

[project.urls]
Homepage = "https://github.com/conjuncts/gmft"
Issues = "https://github.com/conjuncts/gmft/issues"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[tool.flit.sdist]
include = ["gmft/**/*.py", "README.md", "LICENSE"]
exclude = ["test/**/*", "docs/**/*", "notebooks/**/*", "samples/**/*", "reading_list.md", "*.zip",
  "*.tsv", "*.yaml", 
  "TODO.md", "CHANGELOG.md", "dev.md", "comparison.md"]
